Automation summary for Force Undo Checkout testsY2E0OTI5MjktZjQzYy00MG
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "88sy3i5CxjKkWaVy5R8GUx",
+    "id" : "08ApUSrGCGvdHoOD3Q2e4Z",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
