--- a/Explore/VCS_DRS_ZDT/.VCS_DRS_ZDT.Project.json
+++ b/Explore/VCS_DRS_ZDT/.VCS_DRS_ZDT.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "58cg6RRLoSHcFTJR5EFSa4",
+    "id" : "gOhP0NAGmG2b7Qj2eDPE0w",
     "name" : "VCS_DRS_ZDT",
     "type" : "Project",
     "metadata" : {
