Automation summary for Force Undo Checkout testsZDVlYmViZDQtNGFmNi00MD
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "61yazHXRTnilxSmsf2Jvka",
+    "id" : "7CLOggIR6IfkdtkFeBD7o1",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
