Automation summary for Force Undo Checkout testsNDI2OTU2MTYtMzMwNC00Nj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7ltq3P2O7Tbe4G4jzDthWz",
+    "id" : "7yb6bbDWCcheCAhmw1OrGk",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
