Automation summary for Force Undo Checkout testsYzQ3N2JlZjgtYzg2Ny00MD
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "hXYNEoNQMatd2bPBTMr9Ir",
+    "id" : "6EVMNYlQw7vkn7i5Uola6z",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
