Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "cMHMdc7LMaGh5d9IQbpQoG",
+    "id" : "3RhdGHzBkUtjrISFhDV12f",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
