Automation summary for Force Undo Checkout testsZjE5ZTc5ZWMtYzRjNS00Ym
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "aQ4V6CHGfSHj9bXJkyjY8A",
+    "id" : "h6whvoW9AKvjkZ7buapvc7",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
