Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "1wJEUt8C2WSl1wW9HjD5Gu",
+    "id" : "1G0tCoCdHOCc8sbfLCKrCP",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
