Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "1G0tCoCdHOCc8sbfLCKrCP",
+    "id" : "eKMf7Osf1QyeqExpTPlE6p",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
