Automation summary for Force Undo Checkout testsZWM3YzIwMjMtNWQ1Ni00MW
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "h6whvoW9AKvjkZ7buapvc7",
+    "id" : "51MmZWRulu1fXfO0KkDnI1",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
