--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "1LfReacF0sJfeKiayvlhA3",
+    "id" : "1Eew7gfNWI8emtFtltE4Kz",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
