Automation summary for Force Undo Checkout testsNWFhNDNhZGYtOWM3MS00MT
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "51MmZWRulu1fXfO0KkDnI1",
+    "id" : "7ZpHSrJRc8EcqBtnKQP5Mg",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
