Automation summary for Force Undo Checkout testsYWQ3NmFmOWQtYjBjMi00Nj
Automation Desc:Force Undo Checkout test

--- a/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
+++ b/Explore/VCS_ForceUndoCheckoutTest/.VCS_ForceUndoCheckoutTest.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5vzg61Ct67be6QX9PeuwWL",
+    "id" : "0ebRDHDSPoNfCIuXTMXjei",
     "name" : "VCS_ForceUndoCheckoutTest",
     "type" : "Project",
     "metadata" : {
