Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "7ECDVCPUG2mgxlcLaBuZS4",
+    "id" : "5RUcW5ksjUvcHrcnocjfwl",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
