Multi checkin assets
Description for Multi checkin assets

--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "5RUcW5ksjUvcHrcnocjfwl",
+    "id" : "8A3dHSawYEPe3qQobZh0y9",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
