--- a/Explore/VCS_V3_PROJECT/.VCS_V3_PROJECT.Project.json
+++ b/Explore/VCS_V3_PROJECT/.VCS_V3_PROJECT.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "17ZeSMRbcIwlnX54Ya7lSQ",
+    "id" : "8bj67gv8nUkbkrcYR9NLcv",
     "name" : "VCS_V3_PROJECT",
     "type" : "Project",
     "metadata" : {
