--- a/Explore/VCS_V3_PROJECT_2/.V3_VCS_Mapping.DTEMPLATE.json
+++ b/Explore/VCS_V3_PROJECT_2/.V3_VCS_Mapping.DTEMPLATE.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "ggdGAoTEae9jFZk5VF1aeQ",
+    "id" : "cfeZsmhDuaaihSD5AwLyMY",
     "name" : "V3_VCS_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001I17000000000002"
+        "repoHandle" : "01004P17000000000002"
       },
       "contextAttributes" : [ {
         "name" : "id",
@@ -24,7 +24,7 @@
   },
   "dataFileExtension" : "zip",
   "objectRefs" : [ {
-    "id" : "1ZzOuSOMP54kXkcDSWyMO9",
+    "id" : "a5keuppWcmkfGe599P4zQe",
     "name" : "FF_PodCertification",
     "type" : "Connection",
     "metadata" : {
@@ -33,7 +33,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001I0B000000000002"
+        "repoHandle" : "01004P0B000000000002"
       },
       "contextAttributes" : null,
       "additionalInfo" : {
