--- a/Explore/VCS_V3_PROJECT/V3_VCS_FOLDER/.VCS_UI_LTF_Mapping_Task.MTT.json
+++ b/Explore/VCS_V3_PROJECT/V3_VCS_FOLDER/.VCS_UI_LTF_Mapping_Task.MTT.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "aO8nplyjRIraZrUiQW8hC9",
+    "id" : "4Axzo0EcDwukQWhjnaiG0g",
     "name" : "VCS_UI_LTF_Mapping_Task",
     "type" : "MTT",
     "metadata" : {
@@ -9,7 +9,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001T0Z000000000003"
+        "repoHandle" : "01004P0Z000000000003"
       },
       "contextAttributes" : [ {
         "name" : "id",
@@ -24,7 +24,47 @@
   },
   "dataFileExtension" : "zip",
   "objectRefs" : [ {
-    "id" : "0cMJCB8nor7eiLJPLoVeut",
+    "id" : "9ZgSSNBDMMXcPMQnzHNrSM",
+    "name" : "TMS47W1264001",
+    "type" : "AgentGroup",
+    "metadata" : {
+      "modelVersion" : {
+        "major" : 0,
+        "minor" : 0
+      },
+      "repoInfo" : {
+        "repoHandle" : "01004P25000000000002"
+      },
+      "contextAttributes" : null,
+      "additionalInfo" : {
+        "description" : null,
+        "contentType" : "JSON",
+        "documentState" : "VALID"
+      }
+    },
+    "path" : "/SYS"
+  }, {
+    "id" : "a5keuppWcmkfGe599P4zQe",
+    "name" : "FF_PodCertification",
+    "type" : "Connection",
+    "metadata" : {
+      "modelVersion" : {
+        "major" : 0,
+        "minor" : 0
+      },
+      "repoInfo" : {
+        "repoHandle" : "01004P0B000000000002"
+      },
+      "contextAttributes" : null,
+      "additionalInfo" : {
+        "description" : "Flat File connection for Pod Certification Automation",
+        "contentType" : "JSON",
+        "documentState" : "COMPLETE"
+      }
+    },
+    "path" : "/SYS"
+  }, {
+    "id" : "9hyzRI9PrcefTgwmbYXumi",
     "name" : "VCS_UI_LTF_Mapping",
     "type" : "DTEMPLATE",
     "metadata" : {
@@ -33,7 +73,7 @@
         "minor" : 0
       },
       "repoInfo" : {
-        "repoHandle" : "01001T17000000000003"
+        "repoHandle" : "01004P17000000000003"
       },
       "contextAttributes" : [ {
         "name" : "id",
@@ -46,45 +86,5 @@
       }
     },
     "path" : "/Explore/VCS_V3_PROJECT/V3_VCS_FOLDER"
-  }, {
-    "id" : "7BZRgtXkBPpi2PlfmQ9AmJ",
-    "name" : "FF_PodCertification",
-    "type" : "Connection",
-    "metadata" : {
-      "modelVersion" : {
-        "major" : 0,
-        "minor" : 0
-      },
-      "repoInfo" : {
-        "repoHandle" : "01001T0B000000000002"
-      },
-      "contextAttributes" : null,
-      "additionalInfo" : {
-        "description" : "Flat File connection for Pod Certification Automation",
-        "contentType" : "JSON",
-        "documentState" : "COMPLETE"
-      }
-    },
-    "path" : "/SYS"
-  }, {
-    "id" : "9LD6luhPji3fIHtdAze0kr",
-    "name" : "TMS47W1264001",
-    "type" : "AgentGroup",
-    "metadata" : {
-      "modelVersion" : {
-        "major" : 0,
-        "minor" : 0
-      },
-      "repoInfo" : {
-        "repoHandle" : "01001T25000000000002"
-      },
-      "contextAttributes" : null,
-      "additionalInfo" : {
-        "description" : null,
-        "contentType" : "JSON",
-        "documentState" : "VALID"
-      }
-    },
-    "path" : "/SYS"
   } ]
 }
