--- a/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
+++ b/Explore/VCSCommitHistory/.VCSCommitHistory.Project.json
@@ -1,6 +1,6 @@
 {
   "objectInfo" : {
-    "id" : "8A3dHSawYEPe3qQobZh0y9",
+    "id" : "7q2PFjaeCgCcWTsvuwCPmo",
     "name" : "VCSCommitHistory",
     "type" : "Project",
     "metadata" : {
